# ki

./: Buffer_8hpp.html  Buffer_8hpp__dep__incl.dot  Buffer_8hpp__incl.dot  Buffer_8hpp_source.html  BufferedFileReader_8hpp.html  BufferedFileReader_8hpp__dep__incl.dot  BufferedFileReader_8hpp__incl.dot  BufferedFileReader_8hpp_source.html  BufferedFileWriter_8hpp.html  BufferedFileWriter_8hpp__dep__incl.dot  BufferedFileWriter_8hpp__incl.dot  BufferedFileWriter_8hpp_source.html  BufferedParallelCopyTool_8hpp.html  BufferedParallelCopyTool_8hpp__dep__incl.dot  BufferedParallelCopyTool_8hpp__incl.dot  BufferedParallelCopyTool_8hpp_source.html  BufferedQueue_8hpp.html  BufferedQueue_8hpp__dep__incl.dot  BufferedQueue_8hpp__incl.dot  BufferedQueue_8hpp_source.html  CMakeLists.txt  CMakePresets.json  ICopyTool_8hpp.html  ICopyTool_8hpp__dep__incl.dot  ICopyTool_8hpp_source.html  IFileReader_8hpp.html  IFileReader_8hpp__dep__incl.dot  IFileReader_8hpp__incl.dot  IFileReader_8hpp_source.html  IFileWriter_8hpp.html  IFileWriter_8hpp__dep__incl.dot  IFileWriter_8hpp__incl.dot  IFileWriter_8hpp_source.html  IOptionsParser_8hpp.html  IOptionsParser_8hpp__dep__incl.dot  IOptionsParser_8hpp__incl.dot  IOptionsParser_8hpp_source.html  IPCProcInfo_8hpp.html  IPCProcInfo_8hpp__dep__incl.dot  IPCProcInfo_8hpp__incl.dot  (+280 more)
.github/workflows/: cmake-single-platform.yml  documentation.yml
docs/: Doxyfile
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  (+44 more)
src/: main.cpp
src/IPC/: IPCProcInfo.hpp  IPCToolType.hpp  SharedMemoryManager.cpp  SharedMemoryManager.hpp  SiblingProcessObserver.cpp  SiblingProcessObserver.hpp
src/TCPIP/: ClientRequest.hpp  FileInfo.hpp  IRequestHandler.hpp  IServer.hpp  RequestHandler.cpp  RequestHandler.hpp  RequestHeader.hpp  TCPIPBuffer.hpp  TCPIPClient.cpp  TCPIPClient.hpp  TCPIPClientConnection.hpp  TCPIPRequests.hpp  TCPIPServer.cpp  TCPIPServer.hpp  TCPUtiles.hpp
src/TCPIP/Client/: BufferedFileReader.h  IClient.hpp  IClientCommunication.hpp  TCPClientCommunication.cpp  TCPClientCommunication.hpp  TCPIPClient.cpp  TCPIPClient.hpp
src/TCPIP/Common/: Buffer.hpp  FileInfo.hpp  JsonSettingsParser.cpp  JsonSettingsParser.hpp  TCPIPToolSettingsParser.cpp  TCPIPToolSettingsParser.hpp  Utiles.hpp
src/TCPIP/Request/: ClientRequest.cpp  ClientRequest.hpp  CommandFactory.cpp  CommandFactory.hpp  FileInfoReceived.hpp  FlyweightCommand.hpp  ICommand.h  IRequest.h  IRequestHandler.hpp  ObtainBufferRequest.hpp  RequestCreator.cpp  RequestCreator.hpp  RequestHandler.cpp  RequestHandler.hpp  RequestHeader.hpp  RequestParser.hpp  RequestTypes.h
src/TCPIP/RequestHandler/: HeaderReceivedHandler.hpp  HeaderReceivingHandler.hpp  IHandler.hpp  IRequestHandler.hpp  NewRequestHandler.hpp  RequestHandler.cpp  RequestHandler.hpp  RequestReceivedHandler.hpp  RequestReceivingHandler.hpp
src/TCPIP/SecureClient/: SecureClient.cpp  SecureClient.hpp
src/TCPIP/SecureServer/: SecureTCPIPServer.cpp  SecureTCPIPServer.hpp
src/TCPIP/Security/: AbstractKey.hpp  ChaCha20Encryption.cpp  ChaCha20Encryption.hpp  Chacha20Key.cpp  Chacha20Key.hpp  IEncryption.hpp  IKeyGenerator.hpp  IKeyManager.hpp  KeyManager.cpp  KeyManager.hpp  RSAEncryption.cpp  RSAEncryption.hpp  RSAKey.cpp  RSAKey.hpp  RSAKeyManager.cpp  RSAKeyManager.hpp  SecureRequestHandler.cpp  SecureRequestHandler.hpp
src/TCPIP/Server/: ConnectedClient.cpp  ConnectedClient.hpp  IServer.hpp  MultiFileWriter.cpp  MultiFileWriter.hpp  TCPIPQueue.hpp  (+2 more)
src/common/: BufferedParallelCopyTool.hpp  CLILoadIndicator.hpp  CLIProgressBar.hpp  FileLogger.hpp  ICopyTool.hpp  IOptionsParser.hpp  IPCTool.hpp  Logger.cpp  Logger.hpp  OptionsParser.hpp  ParallelCopyTool.cpp  ParallelCopyTool.hpp  ProcessTerminator.hpp  PseudoToolFactory.hpp  Serializer.hpp  StopWatch.cpp  StopWatch.h  TCPIPTool.hpp  ToolTypeEnum.hpp  main.cpp
src/queue/: Buffer.hpp  BufferedQueue.cpp  BufferedQueue.hpp  IQueue.hpp  SynchronizedQueue.cpp  SynchronizedQueue.hpp  TCPIPBuffer.hpp
src/reader/: BufferedFIleReader.hpp  BufferedFileReader.cpp  BufferedFileReader.hpp  IFileReader.hpp  MMapFileReader.cpp  MMapFileReader.hpp  TCPIPBufferedFileReader.h
src/writer/: BufferedFileWriter.cpp  BufferedFileWriter.hpp  IFileWriter.hpp  IFileWritter.hpp  MMapFileWriter.cpp  MMapFileWriter.hpp  MultiFileWriter.cpp  MultiFileWriter.hpp
test/: CMakeLists.txt  CMakeUserPresets.json  CodeCoverage.cmake  bootstrap.sh  bootstrap_gh_actions.sh  bootstrap_with_code_coverage.sh
test/MMapReaderTest/: CMakeLists.txt  MMapFileReaderTest.cpp
test/MMapWriterTest/: CMakeLists.txt  MMapFileWriterTest.cpp
test/Utiles/: MockedOptionsParser.hpp  TmpFile.hpp
test/copyTool/IPCTool/: CMakeLists.txt  main.cpp
test/copyTool/parallelCopyTool/: CMakeLists.txt
test/copyTool/parallelCopyTool/plainTest/: CMakeLists.txt  main.cpp
test/queue/BufferedQueue/Generic/: CMakeLists.txt  main.cpp
test/queue/IPCQueue/: CMakeLists.txt  main.cpp
test/queue/SyncQueue/: CMakeLists.txt
test/queue/SyncQueue/emptyQueue/: CMakeLists.txt  main.cpp
test/queue/SyncQueue/nonEmptyQueue/: CMakeLists.txt  main.cpp
test/reader/MMapReaderTest/: CMakeLists.txt  MMapFileReaderTest.cpp
test/reader/MMapReaderTest/emptyFileRead/: CMakeLists.txt  main.cpp
test/reader/MMapReaderTest/entireFileRead/: CMakeLists.txt  main.cpp
test/reader/MMapReaderTest/noFile/: CMakeLists.txt  main.cpp
test/reader/MMapReaderTest/onePageRead/: CMakeLists.txt  main.cpp
test/writer/MMapWriterTest/: CMakeLists.txt  MMapFileWriterTest.cpp
test/writer/MMapWriterTest/entireFileWrite/: CMakeLists.txt  main.cpp
test/writer/MMapWriterTest/zeroSizeFileWrite/: CMakeLists.txt  main.cpp
(+2 files in other folders)
